--- a/PlanTechShenApp/SignIn.xaml
+++ b/PlanTechShenApp/SignIn.xaml
@@ -3,38 +3,35 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlanTechShenApp.SignIn"
              Title="Sign up">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <Style TargetType="Entry">
+                <Setter Property="FontAttributes" Value="Italic" />
+                <Setter Property="TextColor" Value="Black" />
+                <Setter Property="PlaceholderColor" Value="DimGray"/>
+            </Style>
+        </ResourceDictionary>
+    </ContentPage.Resources>
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="Name"
-                   TextColor="Black"
-                   FontSize="25"/>
-        <Entry x:Name="Name" />
+           
+            <Entry x:Name="Name" Text="{Binding NAme}" Placeholder="Name" 
+                   HeightRequest="40" Keyboard="Name"/>
 
-        <Label Text="Surname"
-                   TextColor="Black"
-                   FontSize="25"/>
-        <Entry x:Name="Surname" />
+            <Entry x:Name="Surname" Text="{Binding Surname}" Placeholder="Surname" 
+                   HeightRequest="40" Keyboard="Surname"/>
+            
+            <Entry x:Name="Email" Text="{Binding Email}" Placeholder="Email" 
+                   HeightRequest="40" Keyboard="Email"/>
 
-        <Label Text="Email"
-                   TextColor="Black"
-                   FontSize="25"/>
-        <Entry x:Name="email" />
+            <Entry x:Name="Telephone" Text="{Binding Telephone}" Placeholder="Telephone" 
+                   HeightRequest="40" Keyboard="Telephone"/>
 
-            <Label Text="Phone"
-                   TextColor="Black"
-                   FontSize="25"/>
-            <Entry x:Name="phone" />
+            <Entry x:Name="Password" Text="{Binding Password}" Placeholder="Password" 
+                   HeightRequest="40" Keyboard="Password"/>
 
-            <Label Text="Password"
-                   TextColor="Black"
-                   FontSize="25"/>
-            <Entry x:Name="Password" />
-
-            <Label Text="Confirm password"
-                   TextColor="Black"
-                   FontSize="25"/>
-            <Entry x:Name="confirmpassword" />
-
+            <Entry x:Name="ConfirmPassword" Text="{Binding ConfirmPassword}" Placeholder="ConfirmPassword" 
+                   HeightRequest="40" Keyboard="ConfirmPassword"/>
 
 
             <Button Text="Sign up"
