--- a/PlanTechShenApp/SignIn.xaml
+++ b/PlanTechShenApp/SignIn.xaml
@@ -15,27 +15,44 @@
     <ContentPage.Content>
         <StackLayout>
            
-            <Entry x:Name="Name" Text="{Binding NAme}" Placeholder="Name" 
-                   HeightRequest="40" Keyboard="Name"/>
+            <Entry x:Name="Name"
+                   Text="{Binding Name}"
+                   Placeholder="Name" 
+                   HeightRequest="40" 
+                   Keyboard="Text"/>
 
-            <Entry x:Name="Surname" Text="{Binding Surname}" Placeholder="Surname" 
-                   HeightRequest="40" Keyboard="Surname"/>
+            <Entry x:Name="Surname"
+                   Text="{Binding Surname}" 
+                   Placeholder="Surname" 
+                   HeightRequest="40"
+                   Keyboard="Text"/>
             
-            <Entry x:Name="Email" Text="{Binding Email}" Placeholder="Email" 
-                   HeightRequest="40" Keyboard="Email"/>
+            <Entry x:Name="Email" 
+                   Text="{Binding Email}"
+                   Placeholder="Email" 
+                   HeightRequest="40"
+                   Keyboard="Email"/>
 
-            <Entry x:Name="Telephone" Text="{Binding Telephone}" Placeholder="Telephone" 
-                   HeightRequest="40" Keyboard="Telephone"/>
+            <Entry x:Name="Telephone" 
+                   Text="{Binding Telephone}"
+                   Placeholder="Telephone" 
+                   HeightRequest="40"
+                   Keyboard="Telephone"/>
 
-            <Entry x:Name="Password" Text="{Binding Password}" Placeholder="Password" 
-                   HeightRequest="40" Keyboard="Password"/>
+            <Entry x:Name="Password" 
+                   Text="{Binding Password}" 
+                   Placeholder="Password" 
+                   HeightRequest="40"
+                   Keyboard="Text"/>
 
-            <Entry x:Name="ConfirmPassword" Text="{Binding ConfirmPassword}" Placeholder="ConfirmPassword" 
-                   HeightRequest="40" Keyboard="ConfirmPassword"/>
-
+            <Entry x:Name="ConfirmPassword"
+                   Text="{Binding ConfirmPassword}"
+                   Placeholder="ConfirmPassword" 
+                   HeightRequest="40" 
+                   Keyboard="Text"/>
 
             <Button Text="Sign up"
-                Clicked="SignInClicked"/>
+                    Clicked="SignInClicked"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
