--- a/PlanTechShenApp/Views/PlantNamePage.xaml
+++ b/PlanTechShenApp/Views/PlantNamePage.xaml
@@ -3,27 +3,28 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlanTechShenApp.Views.PlantNamePage"
              Title="{Binding Name}">
-    
-    
-    <StackLayout Margin="20"
+
+    <ScrollView VerticalOptions="FillAndExpand">
+        <StackLayout Margin="20"
                  VerticalOptions="StartAndExpand">
-        
-        <Label Text="Date"
+
+            <Label Text="Date"
                TextColor="Black"
                 FontAttributes="Bold"
                FontSize="15"/>
-        <DatePicker x:Name="startDatePicker"
+            <DatePicker x:Name="startDatePicker"
                     Margin="30, 0, 0, 30"
                     DateSelected="startDatePicker_DateSelected" />
-        <Label Text="Name" />
-        <Entry Text="{Binding Name}" />
-        <Label Text="Done" />
-        <Switch IsToggled="{Binding Done}" />
-        <Button Text="Save"
+            <Label Text="Name" />
+            <Entry Text="{Binding Name}" />
+            <Label Text="Done" />
+            <Switch IsToggled="{Binding Done}" />
+            <Button Text="Save"
                 Clicked="OnSaveClicked" />
-        <Button Text="Delete"
+            <Button Text="Delete"
                 Clicked="OnDeleteClicked" />
-        <Button Text="Cancel"
+            <Button Text="Cancel"
                 Clicked="OnCancelClicked" />
-    </StackLayout>
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
