--- a/PlanTechShenApp/LogInPage.xaml
+++ b/PlanTechShenApp/LogInPage.xaml
@@ -2,8 +2,9 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="PlanTechShenApp.LogInPage"
+             BackgroundColor="FloralWhite"
              Title="Log in">
-    
+            
     <ContentPage.Resources>
         <ResourceDictionary>
             <Style TargetType="Entry">
@@ -14,15 +15,37 @@
     </ContentPage.Resources>
 
     <ContentPage.Content>
-        <StackLayout Padding="0,20,0,0">
-            <Image Source="https://cdn2.vectorstock.com/i/1000x1000/22/06/plant-pot-cartoon-isolated-blue-lines-vector-24932206.jpg"/>
+        <StackLayout Padding="60"
+                     VerticalOptions="Center"
+                     HorizontalOptions="FillAndExpand">
+            
+
+            <Frame Padding="0"
+                   HeightRequest="200"
+                   WidthRequest="200"
+                   BackgroundColor="white"
+                   CornerRadius="100"
+                   BorderColor="lightgreen"
+                   HorizontalOptions="Center"
+                   VerticalOptions="Center"
+                   IsClippedToBounds="True"
+                   >
+                <Frame.Content>
+                    <Image Source="https://cdn2.vectorstock.com/i/1000x1000/22/06/plant-pot-cartoon-isolated-blue-lines-vector-24932206.jpg"
+                           WidthRequest="180"
+                           HeightRequest="180"
+                           Aspect="Fill"/>
+                           
+                </Frame.Content>
+            </Frame>
             
             <Entry x:Name="Email" 
                    Text="{Binding Email}" 
                    Placeholder="Email" 
                    PlaceholderColor="DimGray"
                    HeightRequest="40"
-                   Keyboard="Email"/>
+                   Keyboard="Email"
+                   />
 
             <Entry x:Name="Password" 
                    Text="{Binding Password}"
@@ -33,11 +56,28 @@
 
             <Button Text="Log in"
                     FontSize="20"
-                    Clicked="LogInClickedAsync"/>
-            
-            <Button Text="Sign up"
-                    FontSize="20"
-                    Clicked="SignUpClickedAsync"/>
+                    Clicked="LogInClickedAsync"
+                    CornerRadius="50"
+                    BorderWidth="1.5"
+                    BorderColor="LightGreen"
+                    />
+            <Label HorizontalOptions="Center">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span Text="Dont have an account?"
+                              TextColor="Gray"/>
+                        <Span Text="Sign Up"
+                              TextColor="Gray"
+                              FontAttributes="Bold"
+                              TextDecorations="Underline"/>
+
+                    </FormattedString>
+                </Label.FormattedText>
+                <Label.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                </Label.GestureRecognizers>
+
+            </Label>
         </StackLayout>
     </ContentPage.Content>
    
